<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".TravelJournalActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_island"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            app:srcCompat="@drawable/island" />

        <ImageView
            android:id="@+id/image_view_rome"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_island"
            app:layout_constraintWidth_percent="0.25"
            app:srcCompat="@drawable/rome" />

        <ImageView
            android:id="@+id/image_view_london"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_rome"
            app:layout_constraintWidth_percent="0.25"
            app:srcCompat="@drawable/london" />

        <ImageView
            android:id="@+id/image_view_paris"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_london"
            app:layout_constraintWidth_percent="0.25"
            app:srcCompat="@drawable/paris" />

        <ImageView
            android:id="@+id/image_view_san_francisco"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_paris"
            app:layout_constraintWidth_percent="0.25"
            app:srcCompat="@drawable/san_francisco" />

        <ImageView
            android:id="@+id/image_view_bucharest"
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginBottom="@dimen/dp24"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_san_francisco"
            app:layout_constraintWidth_percent="0.25"
            app:srcCompat="@drawable/bucharest" />

        <TextView
            android:id="@+id/text_view_holiday_2017"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:paddingTop="@dimen/dp8"
            android:text="@string/holiday_2017"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_island"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_fall_2017"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:paddingTop="@dimen/dp8"
            android:text="@string/fall_2017"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_rome"
            app:layout_constraintTop_toBottomOf="@id/image_view_island" />

        <TextView
            android:id="@+id/text_view_summer_2017"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:paddingTop="@dimen/dp8"
            android:text="Summer 2017"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_london"
            app:layout_constraintTop_toBottomOf="@id/image_view_rome" />

        <TextView
            android:id="@+id/text_view_winter_2017"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:paddingTop="@dimen/dp8"
            android:text="@string/winter_2017"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_paris"
            app:layout_constraintTop_toBottomOf="@id/image_view_london" />

        <TextView
            android:id="@+id/text_view_spring_2018"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:paddingTop="@dimen/dp8"
            android:text="@string/spring_2018"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_san_francisco"
            app:layout_constraintTop_toBottomOf="@id/image_view_paris" />

        <TextView
            android:id="@+id/text_view_summer_2018"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:paddingTop="@dimen/dp8"
            android:text="@string/summer_2018"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_bucharest"
            app:layout_constraintTop_toBottomOf="@id/image_view_san_francisco" />

        <TextView
            android:id="@+id/text_view_islands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/islands"
            app:layout_constraintStart_toEndOf="@+id/image_view_island"
            app:layout_constraintTop_toBottomOf="@+id/text_view_holiday_2017" />

        <TextView
            android:id="@+id/text_view_rome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/rome"
            app:layout_constraintStart_toEndOf="@+id/image_view_rome"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fall_2017" />

        <TextView
            android:id="@+id/text_view_london"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/london"
            app:layout_constraintStart_toEndOf="@+id/image_view_london"
            app:layout_constraintTop_toBottomOf="@+id/text_view_summer_2017" />

        <TextView
            android:id="@+id/text_view_paris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/paris"
            app:layout_constraintStart_toEndOf="@+id/image_view_paris"
            app:layout_constraintTop_toBottomOf="@+id/text_view_winter_2017" />

        <TextView
            android:id="@+id/text_view_san_francisco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/san_francisco"
            app:layout_constraintStart_toEndOf="@+id/image_view_san_francisco"
            app:layout_constraintTop_toBottomOf="@+id/text_view_spring_2018" />

        <TextView
            android:id="@+id/text_view_bucharest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/bucharest"
            app:layout_constraintStart_toEndOf="@+id/image_view_bucharest"
            app:layout_constraintTop_toBottomOf="@+id/text_view_summer_2018" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>